# SpoilerFreePlexSports

./: .dockerignore  .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
sfps/: __init__.py  artwork.py  cli.py  config.py  gemini.py  identifier.py  ledger.py  llm.py  log.py  matcher.py  metadata.py  models.py  organizer.py  pipeline.py  plex.py  retry.py  thesportsdb.py  watcher.py
templates/: spoilerfreeplexsports.xml
tests/: conftest.py  test_cli.py  test_config.py  test_identifier.py  test_ledger.py  test_llm.py  test_matcher.py  test_metadata.py  test_organizer.py  test_pipeline.py  test_plex.py  test_retry.py  test_watcher.py
