[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spoilerfreeplexsports"
version = "0.1.0"
description = "Spoiler-free sports organizer for Plex: identifies recorded games and gives them score-free artwork and metadata before Plex can frame-grab a spoiler."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "James Gallagher" }]
dependencies = [
    "watchdog>=4.0",
    "httpx>=0.27",
    "Pillow>=10.1",  # ImageFont.load_default(size=...) needs 10.1
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
plex = [
    "plexapi>=4.15",
]

[project.scripts]
sfps = "sfps.cli:main"

[project.urls]
Repository = "https://github.com/jamesgallagher/SpoilerFreePlexSports"

[tool.setuptools.packages.find]
include = ["sfps*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
